# cookiecutter-pypackage

./: cookiecutter.json  pyproject.toml  setup.cfg  setup.py
src/: setup.py
src/src/{{cookiecutter.project_slug}}/: core.py
src/{{cookiecutter.project_slug}}/: settings.py
{{cookiecutter.project_slug}}/: Pipfile  setup.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: cli.py  core.py  settings.py
