[tool.poetry]
name = "cookiecutter-pypackage-poetry"
version = "0.1.0"
description = ""
authors = ["Tom <tom@realfactors.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^1.7.0"
alabaster = "^0.7.12"
watchdog = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
tox = "^3.14.3"
pytest-cookies = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
